@@ -1,5 +1,8 @@
 12-Sep-2003 by Matze Braun
 -use the physfs for the colortable cache now
+-removed lots of unused code from Surface class
+-removed the screenshot function (this allowed to remove the BMP saver too).
+ because there are external screenshot tools around.
 
 11-Sep-2003 by Matze Braun
 -removed more win32 specific code
